<resources>
    <string name="app_name">StudentDealz</string>
    <string name="back">Back</string>
    <string name="deal_image">Deal image</string>
    <string name="search">Search</string>
    <string name="search_student_deals">Search for student deals</string>
    <string name="search_in_category">Search in category</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="no_deals_found">No deals found. Try searching for something else.</string>
    <string name="no_category_deals_found">No deals match your search</string>
    <string name="categories">Categories</string>
    <string name="this_weeks_deals">This Week\'s Deals</string>
    <string name="category_subtitle">Student deals in %1$s</string>
    <string name="category_food">Food</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_attractions">Attractions</string>
    <string name="category_office">Office</string>
    <string name="category_electronics">Electronics</string>
    <string name="search_pizza">Pizza</string>
    <string name="search_coffee">Coffee</string>
    <string name="search_clothes">Clothes</string>
    <string name="search_gym">Gym</string>
    <string name="search_ice_cream">Ice Cream</string>
    <string name="search_laptop">Laptop</string>
    <string name="search_phone">Phone</string>
    <string name="search_restaurants">Restaurants</string>
    <string name="redeem_deal">Redeem Deal</string>
    <string name="barcode">Barcode</string>
    <string name="discount_code">Discount code</string>
    <string name="discount_suffix">OFF</string>
    <string name="copy_code">Copy Code</string>
    <string name="code_copied">Code copied</string>
    <string name="redemption_instruction">Show this barcode at checkout to redeem your student discount.</string>
    <string name="expires_on">Expires on %1$s</string>
    <string name="splash_tagline">Find Your Student\nDiscounts</string>
    <string name="start_title">Let’s Get Started</string>
    <string name="start_subtitle">Create an account to access\nexclusive student discounts!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="already_member_login">Already a member? Log in</string>
    <string name="login_title">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="please_fill_all_fields">Please fill in all fields.</string>
    <string name="please_fix_highlighted_fields">Please fix the highlighted fields.</string>
    <string name="logging_in">Logging in...</string>
    <string name="connecting">Connecting...</string>
    <string name="google_sign_in_cancelled">Google sign-in was cancelled. Please try again.</string>
    <string name="google_sign_up_cancelled">Google sign-up was cancelled. Please try again.</string>
    <string name="dont_have_account_signup">Don’t have an account? Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="phone_sign_in_title">Phone Sign In</string>
    <string name="phone_sign_in_subtitle">Enter your phone number and we’ll send a verification code.</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">+972501234567</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_hint">123456</string>
    <string name="verify_code">Verify Code</string>
    <string name="phone_code_sent">Code sent. Check your SMS messages.</string>
    <string name="firebase_test_code">Firebase test code: 123456</string>
    <string name="send_verification_first">Send a verification code first.</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="verification_code_required">Verification code is required</string>
    <string name="sending_code">Sending code...</string>
    <string name="sending_code_before_verify">Sending code, then verifying...</string>
    <string name="verifying_code">Verifying code...</string>
    <string name="please_wait">Please wait...</string>
    <string name="phone_code_failed">Could not send code. Please check the phone number.</string>
    <string name="signup_title">Sign up</string>
    <string name="manual_signup">Manual Sign-Up</string>
    <string name="student_id_photo">Student ID Photo</string>
    <string name="manual_signup_title">Manual Sign Up</string>
    <string name="manual_signup_subtitle">Set up your account using\npersonal details</string>
    <string name="full_name">Full Name</string>
    <string name="id_number">ID Number</string>
    <string name="university_college">University / College</string>
    <string name="or">or</string>
    <string name="upload_student_id_photo">Upload Student ID Photo</string>
    <string name="student_id_subtitle">Upload or take a photo of your\nstudent ID card</string>
    <string name="student_id_hint">Make sure all details are\nclearly visible</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="no_file_picker_found">No file picker found. Please try taking a photo instead.</string>
    <string name="camera_prepare_failed">Could not prepare the camera. Please upload a photo instead.</string>
    <string name="no_camera_app_found">No camera app found. Please upload a photo instead.</string>
    <string name="student_id_photo_title">Student ID Photo</string>
    <string name="student_id_photo_description">StudentDealz student ID verification photo</string>
    <string name="reading_student_id">Reading student ID details...</string>
    <string name="no_student_id_photo_selected">No student ID photo selected yet</string>
    <string name="student_id_photo_selected">Student ID photo selected</string>
    <string name="no_photo_selected">No photo selected yet. You can upload a photo or go back.</string>
    <string name="camera_permission_required">Camera permission is required to take a photo.</string>
    <string name="camera_permission_settings">Camera permission is required. You can enable it in device settings.</string>
    <string name="ocr_failure_message">We couldn’t read the details clearly. Please upload a clearer photo or sign up manually.</string>
    <string name="confirm_student_details_title">Confirm Student Details</string>
    <string name="confirm_student_details_subtitle">Review the details from your student ID</string>
    <string name="student_id_photo_missing">Student ID photo is missing. Please upload or take the photo again.</string>
    <string name="create_account">Create Account</string>
    <string name="creating_account">Creating account...</string>
    <string name="log_out">Log out</string>
    <string name="student_discount">Student Discount</string>
    <string name="discount_off">%1$s OFF</string>
</resources>
